[ci skip] Speed-up RF example f18501707815f7f79699c234a630276fe9123008

--- a/_sources/content/notebooks/multiple_horizons_prediction.ipynb
+++ b/_sources/content/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f113a20",
+   "id": "210b7472",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36bcff3b",
+   "id": "31546b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0a2706",
+   "id": "db14be78",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f0bc5b",
+   "id": "59a6b50f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c38bfc5",
+   "id": "33e7103e",
    "metadata": {},
    "source": [
     "\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a2b9a46",
+   "id": "e8f5c8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd7f72d1",
+   "id": "1e48b4e0",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "930b4f7d",
+   "id": "266b7745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d78b889",
+   "id": "163bbf7b",
    "metadata": {},
    "source": [
     "\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76487ab1",
+   "id": "7150045c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e348bbe5",
+   "id": "25b0e616",
    "metadata": {},
    "source": [
     "\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b818511b",
+   "id": "aa1b8d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9af2228b",
+   "id": "9ead38ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b53cb74",
+   "id": "6dc5c7e2",
    "metadata": {},
    "source": [
     "\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba389cf",
+   "id": "683205ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d367f298",
+   "id": "1d948c8e",
    "metadata": {},
    "source": [
     "\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6620e6",
+   "id": "dac611cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4ec5f5",
+   "id": "dbb7b668",
    "metadata": {},
    "source": [
     "\n",
@@ -333,7 +333,7 @@
     "predicts all horizons at once.\n",
     "\n",
     "Repeat the previous analysis using a `RandomForestRegressor`. Fix the parameter\n",
-    "`min_samples_leaf` to 5.\n",
+    "`min_samples_leaf` to 30 to limit the depth.\n",
     "\n",
     "Once you created the model, plot the horizon forecast for a given date and time.\n",
     "In addition, compute the cross-validated predictions and plot the R2 and MAPE\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de56adfc",
+   "id": "a77ea89e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2542cec1",
+   "id": "695cf79c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,12 +376,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03aa5e87",
+   "id": "663ee031",
    "metadata": {},
    "outputs": [],
    "source": [
     "multioutput_predictions_rf = features.skb.apply(\n",
-    "    RandomForestRegressor(min_samples_leaf=5, random_state=0, n_jobs=-1),\n",
+    "    RandomForestRegressor(min_samples_leaf=30, random_state=0, n_jobs=-1),\n",
     "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ")"
    ]
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c218f56e",
+   "id": "56f935e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc404437",
+   "id": "b4b7a82d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131e0e6e",
+   "id": "1fd35fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f74f4f6f",
+   "id": "036c2859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3def65",
+   "id": "25309a52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543d9dd4",
+   "id": "b8f7e03d",
    "metadata": {},
    "source": [
     "\n",
