--- a/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
+++ b/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54bb5b41",
+   "id": "a6f9dfa2",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0c91ad",
+   "id": "226ce7c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eaf28ed",
+   "id": "9a4912c4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8e1329",
+   "id": "cf686d3b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d2f8f7d",
+   "id": "4bd020db",
    "metadata": {},
    "source": [
     "\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ed8c9e",
+   "id": "abb2a74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb07c7d",
+   "id": "437aea13",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2cef455",
+   "id": "e5321fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5546b369",
+   "id": "ab535c1e",
    "metadata": {},
    "source": [
     "\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b5d7e34",
+   "id": "cea936a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50bc5d8",
+   "id": "d9649335",
    "metadata": {},
    "source": [
     "\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "721dba51",
+   "id": "8964d0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e464e46",
+   "id": "b4a8d1ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0aaa3e4",
+   "id": "9efef210",
    "metadata": {},
    "source": [
     "\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee082686",
+   "id": "1f27cc32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17048910",
+   "id": "1028fd22",
    "metadata": {},
    "source": [
     "\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98746dd1",
+   "id": "a973ab31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd9e3ae",
+   "id": "15e1aa88",
    "metadata": {},
    "source": [
     "\n",
@@ -333,7 +333,7 @@
     "predicts all horizons at once.\n",
     "\n",
     "Repeat the previous analysis using a `RandomForestRegressor`. Fix the parameter\n",
-    "`min_samples_leaf` to 5.\n",
+    "`min_samples_leaf` to 30 to limit the depth.\n",
     "\n",
     "Once you created the model, plot the horizon forecast for a given date and time.\n",
     "In addition, compute the cross-validated predictions and plot the R2 and MAPE\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05656fdd",
+   "id": "53e64b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19ace83",
+   "id": "b4b18317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,12 +376,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8951686",
+   "id": "663c03c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "multioutput_predictions_rf = features.skb.apply(\n",
-    "    RandomForestRegressor(min_samples_leaf=5, random_state=0, n_jobs=-1),\n",
+    "    RandomForestRegressor(min_samples_leaf=30, random_state=0, n_jobs=-1),\n",
     "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ")"
    ]
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b641fd4",
+   "id": "316acc34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f37720c",
+   "id": "b25227a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab97c1c1",
+   "id": "1ea372e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0412da29",
+   "id": "046050b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a0f2d3",
+   "id": "6c4ba04b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ce9b74",
+   "id": "4b7ccdea",
    "metadata": {},
    "source": [
     "\n",
